# Enrichment_AI-App

./: .gitignore  App.py  README.md  justfile  pyproject.toml  requirements.txt
.vscode.ext/: .obsolete
.vscode.ext/charliermarsh.ruff-2025.28.0-darwin-x64/: .vsixmanifest  package.json
.vscode.ext/davidanson.vscode-markdownlint-0.60.0/: package.json
.vscode.ext/github.copilot-1.372.0/: package.json
.vscode.ext/github.copilot-chat-0.32.0/: .vsixmanifest  package.json  package.nls.cs.json  package.nls.de.json  package.nls.es.json  package.nls.fr.json  package.nls.it.json  package.nls.ja.json  package.nls.ko.json  package.nls.pl.json  package.nls.pt-br.json  package.nls.qps-ploc.json  package.nls.ru.json  package.nls.tr.json  package.nls.zh-cn.json  package.nls.zh-tw.json  telemetry.json
.vscode.ext/gruntfuggly.todo-tree-0.0.226/: package.json
.vscode.ext/ms-azuretools.vscode-azureresourcegroups-0.11.4/: .vsixmanifest  CHANGELOG.md  package.json
.vscode.ext/ms-azuretools.vscode-containers-2.2.0/: package.json
.vscode.ext/ms-python.debugpy-2025.14.1-darwin-x64/: .vsixmanifest  package.json
.vscode.ext/ms-python.python-2025.16.0-darwin-x64/: .vsixmanifest  package.json
.vscode.ext/ms-python.vscode-pylance-2025.8.3/: package.json
.vscode.ext/ms-python.vscode-python-envs-1.10.0-darwin-x64/: .vsixmanifest  package.json
.vscode.ext/ms-vscode-remote.remote-containers-0.427.0/: package.json
.vscode.usr/: DIPS-wal  Network Persistent State  TransportSecurity  machineid
data/: all capital cities in the world.csv
lib/: media_utils.py
views/: Start.py
(+350 files in other folders)
